--- a/javascript-project-10/index.html
+++ b/javascript-project-10/index.html
@@ -1,13 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Login Form with OTP and EmailJS</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 </head>
-<body>
-    
-    <input type="number" id="input">
-    <script src="app.js"></script>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+
+  <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
+    <h2 class="text-2xl font-bold mb-6 text-center">Login Form with OTP</h2>
+    <form id="loginForm" class="space-y-4">
+      
+      <div>
+        <label class="block mb-1 font-semibold">Name</label>
+        <input type="text" id="name" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400" required>
+      </div>
+
+      <div>
+        <label class="block mb-1 font-semibold">Email</label>
+        <input type="email" id="email" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400" required>
+      </div>
+
+      <div>
+        <label class="block mb-1 font-semibold">Password</label>
+        <input type="password" id="password" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400" required>
+      </div>
+
+      <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-md hover:bg-blue-600 transition duration-200">
+        Submit
+      </button>
+
+    </form>
+
+    <!-- OTP Input Section (hidden by default) -->
+    <div id="otpSection" class="hidden mt-6">
+      <label class="block mb-1 font-semibold">Enter OTP</label>
+      <input type="text" id="otpInput" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-green-400" placeholder="Enter received OTP">
+
+      <button id="verifyOtpBtn" class="mt-4 w-full bg-green-500 text-white py-2 rounded-md hover:bg-green-600 transition duration-200">
+        Verify OTP
+      </button>
+    </div>
+
+  </div>
+
+  <script>
+    (function() {
+      emailjs.init("Qzb9CnxmhL4YUVNvr"); // <-- apni EmailJS PUBLIC key lagani hai
+    })();
+
+    const form = document.getElementById('loginForm');
+    const otpSection = document.getElementById('otpSection');
+    const verifyOtpBtn = document.getElementById('verifyOtpBtn');
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+
+      // 1. Generate OTP
+      const otp = Math.floor(100000 + Math.random() * 900000); // 6 digit OTP
+
+      // 2. Save user data + otp in localStorage
+      localStorage.setItem('user', JSON.stringify({ name, email, password, otp }));
+
+      // 3. Prepare email params
+      const templateParams = {
+        sender_name: name,
+        sender_email: email,
+        sender_password: password,
+        otp_code: otp
+      };
+
+      // 4. Send email using EmailJS
+      emailjs.send('service_cdl1aoy', 'template_8pt0cwm', templateParams)
+      .then(function(response) {
+        console.log('SUCCESS!', response.status, response.text);
+        alert('OTP sent to your email!');
+        // Show OTP input section
+        otpSection.classList.remove('hidden');
+      }, function(error) {
+        console.log('FAILED...', error);
+        alert('Failed to send OTP.');
+      });
+
+    });
+
+    // OTP Verify button
+    verifyOtpBtn.addEventListener('click', function() {
+      const enteredOtp = document.getElementById('otpInput').value;
+      const userData = JSON.parse(localStorage.getItem('user'));
+
+      if (userData && enteredOtp == userData.otp) {
+        alert('OTP Verified Successfully! 🎉');
+        // Clear LocalStorage if needed
+        localStorage.removeItem('user');
+      } else {
+        alert('Invalid OTP. Please try again.');
+      }
+    });
+
+  </script>
+
 </body>
 </html>
